# Terraform-MCP-Server

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  terraform-mcp-server.py
examples/sample_terraform/: main.tf
src/: __init__.py  config.py  main.py
src/handlers/: __init__.py  terraform.py  utils.py
tests/: test_handlers.py
