[project]
name = "terraform-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.1",
    "python-dotenv>=1.1.0",
    "terraform-python>=0.0.1",
    "uvicorn>=0.34.0",
]
